--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
 	<meta name="description" content="SidCritical just do thing here and there">
 	<meta property="og:description" content="SidCritical just do thing here and there">
-	<meta property="og:title" content="King of KFC Jamal &middot; Jamal Cognetta">
+	<meta property="og:title" content="SidCritical &middot; Jamal Cognetta">
 	<meta property="twitter:card" content="summary">
-	<meta property="twitter:site" content="@jamalizcool">
+	<meta property="twitter:site" content="@Sidcritical">
 	<meta property="og:image" content="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/34/348d58094507be9db7506f4b5f84948e936e1d1c_full.jpg">
 	<link rel="image_src" href="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/34/348d58094507be9db7506f4b5f84948e936e1d1c_full.jpg">
 </head>
